--- a/bookmarks/account/templates/base.html
+++ b/bookmarks/account/templates/base.html
@@ -26,7 +26,7 @@
         <span class="user">
             {% if request.user.is_authenticated %}
                 Hello {{ request.user.first_name|default:request.user.username }},
-                <form action="{% url 'logout' %}" method=""post>
+                <form action="{% url 'logout' %}" method="post">
                     <button type="submit">Logout</button>
                     {% csrf_token %}
                 </form>
