--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -10,7 +10,10 @@
             Please try again.
         </p>
     {% else %}
-        <p>Please use the following form to log-in:</p>
+        <p>
+            Please use the following form to log-in.
+            If you dont have an account <a href="{% url 'register' %}">register here</a>
+        </p>
     {% endif %}
     
     <div class="login-form">
