--- a/bookmarks/account/templates/account/dashboard.html
+++ b/bookmarks/account/templates/account/dashboard.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h1>Dashboard</h1>
-    <p>Welcome to your dashbaord</p>
+    <p>Welcome to your dashboard. you can <a href="{% url 'edit' %}">edit your profile</a> or <a href="{% url 'password_change' %}">change your password</a></p>
 {% endblock %}
